--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Indecision App
+        Jordan Kurtzman || Web Developer
     </title>
 </head>
 
