--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
+    
     <title>
         Jordan Kurtzman || Web Developer
     </title>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
     <div id="app"></div>
+    
+
     <script src="/bundle.js"></script>
 </body>
 
