--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,11 @@
     <title>
         Jordan Kurtzman || Web Developer
     </title>
+    <link href="./stars.svg" rel="icon">
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+   
+    
 </head>
 
 <body>
