--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,13 @@
 </head>
 
 <body>
+    <!-- A little help for the Netlify post-processing bots -->
+    <form name="contact" netlify netlify-honeypot="bot-field" action='/' hidden>
+        <input type="text" name="name" />
+        <input type="email" name="email" />
+        <textarea name="message"></textarea>
+    </form>
+
     <div id="app"></div>
     
 
