--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         Jordan Kurtzman || Web Developer
     </title>
     <link href="./stars.svg" rel="icon">
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssnormalize/cssnormalize-min.css">
     <link href="./css/app.css rel='stylesheet">
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
